# sipd

src/: CMakeLists.txt  callid.cpp  callid.h  configure.cpp  configure.h  main.cpp  sipendpoint.cpp  sipendpoint.h  sipmesage.cpp  sipmessage.cpp  sipmessage.h  siprouter.cpp  siprouter.h  sqlite3.cpp  sqlite3.h  sslserver.cpp  sslserver.h  ubushandle.cpp  ubushandle.h  wsserver.cpp  wsserver.h
